<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TelaSteam">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <ImageButton
            android:id="@+id/imageButton1"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="25dp"
            android:adjustViewBounds="false"
            android:background="@color/yellow"
            android:contentDescription="@string/app_1p_botao4"
            android:scaleType="fitCenter"
            android:src="@drawable/img_1"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_toEndOf="@+id/imageButton1"
            android:background="@color/yellow"
            android:contentDescription="@string/app_1p_botao2"
            android:scaleType="fitCenter"
            android:src="@drawable/img_2" />

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_toEndOf="@+id/imageButton2"
            android:background="@color/yellow"
            android:contentDescription="@string/app_1p_botao3"
            android:scaleType="fitCenter"
            android:src="@drawable/img_3" />

        <ImageButton
            android:id="@+id/imageButton4"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_toEndOf="@+id/imageButton3"
            android:background="@color/yellow"
            android:contentDescription="@string/app_1p_botao1"
            android:scaleType="fitCenter"
            android:src="@drawable/img_4" />

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>