<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="370dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="40dp"
        android:justificationMode="inter_word"
        android:text="@string/app_1p_desc"
        android:textColor="#757575"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.711" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="400dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="180dp"
        android:text="@string/app_1p_titulo"
        android:textColor="@color/yellow"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.401" />

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="1.0">

        <ImageButton
            android:id="@+id/imageButton1"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="25dp"
            android:adjustViewBounds="false"
            android:background="@color/yellow"
            android:contentDescription="@string/app_1p_botao4"
            android:scaleType="fitCenter"
            android:src="@drawable/img_1"
            android:onClick="IrPlanetas"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_toEndOf="@+id/imageButton1"
            android:background="@color/yellow"
            android:contentDescription="@string/app_1p_botao2"
            android:scaleType="fitCenter"
            android:onClick="IrPersonagem"
            android:src="@drawable/img_2" />

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_toEndOf="@+id/imageButton2"
            android:background="@color/yellow"
            android:contentDescription="@string/app_1p_botao3"
            android:scaleType="fitCenter"
            android:onClick="IrHistoria"
            android:src="@drawable/img_3" />

        <ImageButton
            android:id="@+id/imageButton4"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_toEndOf="@+id/imageButton3"
            android:background="@color/yellow"
            android:contentDescription="@string/app_1p_botao1"
            android:scaleType="fitCenter"
            android:onClick="IrSteam"
            android:src="@drawable/img_4" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="55dp"
        android:layout_height="42dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="340dp"
        android:layout_marginBottom="392dp"
        android:src="@drawable/img_logo"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>